# Engine

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp
game/scene_config/: Splashscreen.xml  Tutorial.xml
game/scenes/: Tutorial.cpp  Tutorial.h
utils/: Game.cpp  Game.h
utils/base/: Scene.cpp  Scene.h  XMLParser.cpp  XMLParser.h
utils/objects/: Player.cpp  Player.h
